--- a/basic-react-site/package.json
+++ b/basic-react-site/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-motion": "^0.5.2",
     "react-overflow": "^0.2.1",
     "react-scripts": "3.0.1",
     "styled-components": "^4.3.2"
