--- a/basic-react-site/package.json
+++ b/basic-react-site/package.json
@@ -10,7 +10,9 @@
     "react-motion": "^0.5.2",
     "react-overflow": "^0.2.1",
     "react-scripts": "3.0.1",
-    "styled-components": "^4.3.2"
+    "react-scroll": "^1.7.12",
+    "styled-components": "^4.3.2",
+    "use-window-width": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
