--- a/basic-react-site/package.json
+++ b/basic-react-site/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.3.1",
     "@material-ui/icons": "^4.2.1",
     "react": "^16.8.6",
+    "react-awesome-slider": "^1.0.1",
     "react-dom": "^16.8.6",
     "react-motion": "^0.5.2",
     "react-overflow": "^0.2.1",
