--- a/basic-react-site/package.json
+++ b/basic-react-site/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@material-ui/core": "^4.3.1",
     "@material-ui/icons": "^4.2.1",
+    "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-awesome-slider": "^1.0.1",
     "react-dom": "^16.8.6",
+    "react-google-recaptcha": "^2.0.1",
     "react-motion": "^0.5.2",
     "react-overflow": "^0.2.1",
     "react-router-dom": "^5.0.1",
